# personal-blog-rust-vue

./: .env.example  .gitignore  Cargo.toml
.cargo/: config.toml.example
backend/: .gitignore  Cargo.toml  README.md
backend/.cargo/: config.toml.example
backend/entity/: Cargo.toml
backend/entity/src/: category.rs  post.rs  post_tag.rs  tag.rs
backend/migration/: Cargo.toml  README.md
backend/migration/src/: m20250129_000001_create_table_post.rs  m20250131_033230_create_table_tag.rs  m20250131_044636_create_table_post_category.rs
backend/src/: main.rs
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  post_category.rs  prelude.rs  sea_orm_active_enums.rs
entity/src/entities/: category.rs  mod.rs  sea_orm_active_enums.rs
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: main.js
frontend/src/assets/: base.css  main.css  main.scss  text-styles.scss  untitled-ui-figma-vars.css
frontend/src/components/: AppHeader.vue  MarkdownRenderer.vue
frontend/src/components/Content/: HeroSection.vue  PostList.vue  PostListItem.vue
frontend/src/components/Layout/: AppHeader.vue  CategoryTabs.vue  HorizontalTabs.vue  SideBar.vue
frontend/src/components/UI/: AlertMessage.vue  BaseCard.vue  DarkModeToggle.vue  VueDivider.vue
frontend/src/components/__tests__/: HelloWorld.spec.js
frontend/src/composables/: useBlogApi.js  useFetchApi.js
frontend/src/router/: router.js
frontend/src/stores/: appStore.js
frontend/src/views/: HomeView.vue  PostView.vue  PostsView.vue  TestView.vue
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250129_000001_create_table_post.rs  m20250130_042003_create_table_category.rs  m20250131_042256_create_table_post_tag.rs
src/: main.rs
