[package]
name = "personal-blog-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tower =  "0.5.2"
sea-orm = { version = "1.1.0", features = [ "sqlx-mysql", "runtime-tokio-native-tls" ] }
entity = { path = "entity" }
migration = { path = "migration" }
log = "0.4.25"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[package.metadata.scripts]
migrate = "cargo run --bin migrate"