[package]
name = "personal-blog-backend"
version = "0.1.0"
edition = "2021"
default-run = "personal-blog-backend"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "with-json"] }
entity = { path = "entity" }
chrono = "0.4.39"
fake = "3.1.0"
rand = "0.9.0"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
itertools = "0.14.0"

[[bin]]
name = "seed-data"
path = "src/bin/seed-data.rs"

[package.metadata.scripts]
command-seed-data = "cargo run --bin seed-data"